--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,24 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal">
 
         <Button
             android:id="@+id/bPortfolio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></Button>
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:text="@string/portfolio"
+            android:backgroundTint="@color/sky_blue"
+            android:layout_margin="@dimen/padding_small" />
 
         <Button
             android:id="@+id/bProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></Button>
+            android:layout_width="@dimen/button_width"
+            android:layout_height="wrap_content"
+            android:text="@string/profile"
+            android:backgroundTint="@color/sky_blue"
+            android:layout_margin="@dimen/padding_small" />
 
     </LinearLayout>
 
@@ -29,6 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
