--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,47 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/mountain_gray">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:paddingTop="@dimen/padding_large"
-    android:textColor="@color/mountain_gray"
     >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:padding="@dimen/padding_small"
-        android:textSize="@dimen/font_large"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/occupation"
-        android:padding="@dimen/padding_small"
-        android:textSize="@dimen/font_medium"/>
+        android:padding="@dimen/margin_small"
+        android:textSize="@dimen/font_medium"
+        android:textColor="@color/white"
+        android:layout_margin="@dimen/margin_small"
+        android:gravity="center_horizontal"/>
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:src="@drawable/me"
-        android:layout_margin="@dimen/padding_small"
+        android:layout_margin="@dimen/margin_small"
         >
     </ImageView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/presentation"
-        android:padding="@dimen/padding_small"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:layout_marginHorizontal="@dimen/margin_medium"
         android:textSize="@dimen/font_small"
+        android:textColor="@color/white"
         android:gravity="center_horizontal"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Se Katjas LinkedIn-sida"
+        android:text="@string/see_linkedin"
         android:id="@+id/linkedin"
-        android:layout_margin="@dimen/padding_small"
+        android:layout_margin="@dimen/margin_small"
         android:backgroundTint="@color/sky_blue"
     />
 </LinearLayout>
