--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,9 @@
     <dimen name="font_small">14sp</dimen>
     <dimen name="font_medium">16sp</dimen>
     <dimen name="font_large">24sp</dimen>
-    <dimen name="padding_small">10dp</dimen>
-    <dimen name="padding_medium">25dp</dimen>
-    <dimen name="padding_large">50dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="margin_small">10dp</dimen>
+    <dimen name="margin_medium">25dp</dimen>
+    <dimen name="margin_large">50dp</dimen>
     <dimen name="button_width">150dp</dimen>
 
 </resources>
