Fungerande version under RecyclerView debugging

--- a/app/src/main/res/layout/portfolio_item.xml
+++ b/app/src/main/res/layout/portfolio_item.xml
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/portfolio_item_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="30dp">
+    app:cardCornerRadius="30dp"
+    android:layout_margin="@dimen/margin_small"
+    android:backgroundTint="@color/white">
 
     <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+        android:id="@+id/portfolio_item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/portfolio_item_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/short_descripton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textColor="@color/mountain_gray"
+        android:textSize="@dimen/font_medium"
+        tools:text="short_description"
+        android:text="short_description"
     />
 
 </androidx.cardview.widget.CardView>
