Fixat massa saker, bl.a. så att alla fragment fungerar.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="margin_medium">25dp</dimen>
     <dimen name="margin_large">50dp</dimen>
     <dimen name="button_width">150dp</dimen>
+    <dimen name="portfolio_item_height">250dp</dimen>
 
 </resources>
