--- a/app/src/main/res/layout/portfolio_item.xml
+++ b/app/src/main/res/layout/portfolio_item.xml
@@ -5,39 +5,41 @@
 
     android:id="@+id/portfolio_item_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="30dp"
     android:layout_margin="@dimen/margin_small"
     android:backgroundTint="@color/white">
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/portfolio_item_height"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/portfolio_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/font_medium"
         android:layout_marginTop="@dimen/font_medium"
-        android:layout_marginHorizontal="@dimen/font_medium"/>
+        />
 
     <ImageView
         android:id="@+id/portfolio_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_small"/>
+        />
 
     <TextView
         android:id="@+id/short_descripton"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/font_medium"
+        android:layout_marginBottom="@dimen/font_medium"
         android:gravity="center"
-        android:textStyle="bold"
         android:textColor="@color/mountain_gray"
         android:textSize="@dimen/font_medium"
-        android:layout_marginBottom="@dimen/font_medium"
-        android:layout_marginHorizontal="@dimen/font_medium"
-    />
+        android:textStyle="bold"
+        />
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
