--- a/app/src/main/res/layout/portfolio_item.xml
+++ b/app/src/main/res/layout/portfolio_item.xml
@@ -2,44 +2,50 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:id="@+id/portfolio_item_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/portfolio_item_height"
     app:cardCornerRadius="30dp"
     android:layout_margin="@dimen/margin_small"
     android:backgroundTint="@color/white">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/portfolio_item_height"
-        android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/portfolio_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/font_medium"
-        android:layout_marginTop="@dimen/font_medium"
-        />
+        <TextView
+            android:id="@+id/portfolio_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="@dimen/font_xs"
+            android:gravity="center_horizontal"/>
 
-    <ImageView
-        android:id="@+id/portfolio_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        <ImageView
+            android:id="@+id/portfolio_item_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/portfolio_item_name" />
 
-    <TextView
-        android:id="@+id/short_descripton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/font_medium"
-        android:layout_marginBottom="@dimen/font_medium"
-        android:gravity="center"
-        android:textColor="@color/mountain_gray"
-        android:textSize="@dimen/font_medium"
-        android:textStyle="bold"
-        />
-    </LinearLayout>
+        <TextView
+            android:id="@+id/short_descripton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/font_medium"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:gravity="center"
+            android:textColor="@color/mountain_gray"
+            android:textSize="@dimen/font_xs"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/portfolio_item_image" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
