--- a/app/src/main/res/layout/portfolio_item_image.xml
+++ b/app/src/main/res/layout/portfolio_item_image.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/portfolio_item_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="30dp"
-    android:layout_margin="@dimen/margin_small"
-    android:backgroundTint="@color/white">
-
-    <TextView
-        android:id="@+id/portfolio_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_small">
 
     <ImageView
         android:id="@+id/portfolio_item_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="30dp"
         />
 
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
