--- a/app/src/main/res/layout/fragment_portfolio_item.xml
+++ b/app/src/main/res/layout/fragment_portfolio_item.xml
@@ -20,7 +20,8 @@
         android:id="@+id/itemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_small"
+        android:layout_marginHorizontal="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_medium"
         android:gravity="center_horizontal"
         android:text="@string/title_dummy"
         android:textColor="@color/white"
@@ -34,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginVertical="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:gravity="center_horizontal"
         android:text="@string/description_dummy"
         android:textColor="@color/white"
