--- a/app/src/main/res/layout/portfolio_item.xml
+++ b/app/src/main/res/layout/portfolio_item.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/portfolio_item_root"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/portfolio_item_height"
-    app:cardCornerRadius="30dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/margin_medium"
     android:layout_margin="@dimen/margin_small"
     android:backgroundTint="@color/white">
 
@@ -16,7 +16,7 @@
         <TextView
             android:id="@+id/portfolio_item_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_40dp"
             android:layout_marginHorizontal="@dimen/margin_small"
             android:layout_marginTop="@dimen/margin_small"
             android:textStyle="bold"
@@ -28,8 +28,8 @@
 
         <ImageView
             android:id="@+id/portfolio_item_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_60dp"
+            android:layout_height="@dimen/_60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/portfolio_item_name" />
@@ -37,15 +37,16 @@
         <TextView
             android:id="@+id/short_descripton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_100dp"
             android:layout_marginHorizontal="@dimen/font_medium"
             android:layout_marginBottom="@dimen/margin_small"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:textColor="@color/mountain_gray"
             android:textSize="@dimen/font_xs"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/portfolio_item_image" />
+            app:layout_constraintTop_toBottomOf="@+id/portfolio_item_image"
+            android:layout_marginTop="@dimen/margin_small" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
