--- a/app/src/main/res/layout/portfolio_item_image.xml
+++ b/app/src/main/res/layout/portfolio_item_image.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:id="@+id/portfolio_item_root"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_small">
+    android:layout_width="288dp"
+    android:layout_height="631dp"
+    android:layout_gravity="center_horizontal"
+    app:cardCornerRadius="@dimen/margin_large">
 
     <ImageView
         android:id="@+id/portfolio_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        app:cardCornerRadius="30dp"
+        android:layout_width="288dp"
+        android:layout_height="631dp"
         />
 
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
