--- a/app/src/main/res/layout/portfolio_item_image.xml
+++ b/app/src/main/res/layout/portfolio_item_image.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/portfolio_item_root"
-    android:layout_width="288dp"
-    android:layout_height="631dp"
-    android:layout_gravity="center_horizontal"
-    app:cardCornerRadius="@dimen/margin_large">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/margin_medium"
+    android:layout_margin="@dimen/margin_small">
 
     <ImageView
-        android:id="@+id/portfolio_item_image"
-        android:layout_width="288dp"
-        android:layout_height="631dp"
+        android:id="@+id/portfolio_item_images"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         />
 
 </androidx.cardview.widget.CardView>
