--- a/app/src/main/res/layout/portfolio_item_image.xml
+++ b/app/src/main/res/layout/portfolio_item_image.xml
@@ -8,10 +8,22 @@
     app:cardCornerRadius="@dimen/margin_medium"
     android:layout_margin="@dimen/margin_small">
 
-    <ImageView
-        android:id="@+id/portfolio_item_images"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/portfolio_item_images"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="W,2525:1152"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="fitXY"
         />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
